k8s/order-deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-blue
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: blue
  template:
    metadata:
      labels:
        app: order
        version: blue
    spec:
      containers:
      - name: order
        image: your-dockerhub/order-service:v1
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
