k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  selector:
    app: order
    version: green   # Change this to "blue" or "green" based on routing
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
