k8s/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service-blue
  namespace: ecommerce
spec:
  selector:
    app: product
    version: blue   # Change to "blue" or "green" as needed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
